# sol-parser-sdk

./: ACCURACY_VERIFICATION_REPORT.md  ALL_PROTOCOLS_INNER_INSTRUCTION.md  BENCHMARKS.md  Cargo.toml  DISCRIMINATOR_LUT_OPTIMIZATION.md  FINAL_OPTIMIZATION_SUMMARY.md  FINAL_SUMMARY.md  HOT_PATH_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTION_PARSING.md  OPTIMIZATION_SESSION_2025-12-27.md  PARSER_PLUGINS.md  PARSER_PLUGIN_STATUS.md  PARSER_PLUGIN_TEMPLATE.md  README.md  README_CN.md  RPC_PARSER_USAGE.md  TEST_PUMPSWAP.md  ZERO_COPY_STRING_OPTIMIZATION.md  ZERO_LATENCY_OPTIMIZATION_REPORT.md  build_output.txt  clippy_output.txt  clippy_output_new.txt  clippy_output_v3.txt  context7.json  pumpfun_create_event.json
benches/: zero_latency_optimizations.rs
docs/: grpc-vs-rpc.md  troubleshooting-latency.md
examples/: basic.rs  clock_benchmark.rs  debug_pump_tx.rs  debug_pumpswap_tx.rs  dynamic_subscription.rs  listen_pumpfun_create.rs  meteora_damm_grpc.rs  parse_meteora_damm_tx.rs  parse_pump_tx.rs  parse_pumpswap_tx.rs  pumpfun_quick_test.rs  pumpfun_trade_filter.rs  pumpfun_trade_filter_ordered.rs  pumpfun_with_metrics.rs  pumpswap_create_pool.rs  pumpswap_low_latency.rs  pumpswap_ordered.rs  pumpswap_swaps.rs  test_account_filling.rs
examples/events/: pumpfun_create_event.json  pumpswap_buy_event.json  pumpswap_create_pool_event.json  pumpswap_sell_event.json
src/: lib.rs  rpc_parser.rs  warmup.rs
src/accounts/: mod.rs  nonce.rs  pumpswap.rs  token.rs  utils.rs
src/common/: metrics.rs  simd_utils.rs
src/core/: account_dispatcher.rs  account_filler.rs  cache.rs  clock.rs  common_filler.rs  events.rs  merger.rs  mod.rs  unified_parser.rs
src/core/account_fillers/: bonk.rs  meteora.rs  mod.rs  orca.rs  pumpfun.rs  pumpswap.rs  raydium.rs
src/grpc/: buffers.rs  client.rs  instruction_parser.rs  mod.rs  program_ids.rs  types.rs
src/instr/: all_inner.rs  inner_common.rs  meteora_amm.rs  meteora_damm.rs  meteora_dlmm.rs  mod.rs  orca_whirlpool.rs  program_ids.rs  pump.rs  pump_amm.rs  pump_amm_inner.rs  pump_inner.rs  pumpfun.rs  raydium_amm.rs  raydium_clmm.rs  raydium_clmm_inner.rs  raydium_cpmm.rs  raydium_launchpad.rs  utils.rs
src/logs/: discriminator_lut.rs  meteora_damm.rs  mod.rs  optimized_matcher.rs  perf_hints.rs  pump.rs  pump_amm.rs  pumpfun.rs  raydium_amm.rs  raydium_clmm.rs  raydium_cpmm.rs  utils.rs  zero_copy_parser.rs
